--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="row flex-lg-row-reverse align-items-center g-5 py-0">
         <div class="col-lg-6 d-flex justify-content-center">
           <img
-            src="/static/intro.png"
+            href="static/intro.png"
             class="d-block mx-lg-auto img-fluid"
             alt="Bootstrap Themes"
             loading="lazy"
