--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
             role="button"
             ><i class="fab fa-linkedin-in"></i
           ></a>
-          <!-- Githubb -->
+          <!-- Github -->
           <a
             class="btn btn-primary btn-floating m-1"
             style="background-color: #333333"
