--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
         <div class="col text-center">
           <h5 class="col"><strong>Token Address</strong></h5>
           <div class="row my-3">
-            <mark class="col-sm tokenAddress">0xabc</mark>
+            <mark class="col-sm tokenAddress">0x56fb94eda9bf5e32520e636d270F52bf2bf1F1bE</mark>
             <div class="col-sm-1"></div>
 
             <button
