--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
     <script src="/static/c.js"></script>
     <script src="/static/b.js"></script>
     <link rel="stylesheet" href="/static/styles.css" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7KB79ESXBB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-7KB79ESXBB');
+    </script>
   </head>
 
   <body>
