--- a/index.html
+++ b/index.html
@@ -590,63 +590,63 @@
 
     <br /><br /><br /><br /><br />
 
-    <footer class="bg-light text-center text-white">
+      <footer class="bg-light text-center text-white">
       <!-- Grid container -->
-      <div class="container p-4 pb-0" style="display: none">
+      <div class="container p-4 pb-0" style="display: block">
         <!-- Section: Social media -->
         <section class="mb-4">
-          <!-- Facebook -->
+          <!-- Telegram -->
           <a
+            class="btn btn-primary btn-floating m-1"
+            style="background-color: #dd4b39"
+            href="https://t.me/safemoonmakerofficial"
+            role="button"
+            ><i class="fab fa-google"></i>Telegram</a
+          >
+
+          <!-- Facebook -->
+          <!-- <a
             class="btn btn-primary btn-floating m-1"
             style="background-color: #3b5998"
             href="#!"
             role="button"
             ><i class="fab fa-facebook-f"></i
-          ></a>
+          ></a> -->
 
           <!-- Twitter -->
-          <a
+          <!-- <a
             class="btn btn-primary btn-floating m-1"
             style="background-color: #55acee"
             href="#!"
             role="button"
             ><i class="fab fa-twitter"></i
-          ></a>
-
-          <!-- Google -->
-          <a
-            class="btn btn-primary btn-floating m-1"
-            style="background-color: #dd4b39"
-            href="#!"
-            role="button"
-            ><i class="fab fa-google"></i
-          ></a>
+          ></a> -->
 
           <!-- Instagram -->
-          <a
+          <!-- <a
             class="btn btn-primary btn-floating m-1"
             style="background-color: #ac2bac"
             href="#!"
             role="button"
             ><i class="fab fa-instagram"></i
-          ></a>
+          ></a> -->
 
           <!-- Linkedin -->
-          <a
+          <!-- <a
             class="btn btn-primary btn-floating m-1"
             style="background-color: #0082ca"
             href="#!"
             role="button"
             ><i class="fab fa-linkedin-in"></i
-          ></a>
+          ></a> -->
           <!-- Github -->
-          <a
+          <!-- <a
             class="btn btn-primary btn-floating m-1"
             style="background-color: #333333"
             href="#!"
             role="button"
             ><i class="fab fa-github"></i
-          ></a>
+          ></a> -->
         </section>
         <!-- Section: Social media -->
       </div>
