--- a/index.html
+++ b/index.html
@@ -653,6 +653,7 @@
       <!-- Grid container -->
 
       <!-- Copyright -->
+        <p>bc1qrp38cnv9zkh9tuxx9s07p9munej8tep65ead94</p>
       <div
         class="text-center p-3"
         style="background-color: rgba(17, 0, 255, 0.2)"
