--- a/index.html
+++ b/index.html
@@ -49,8 +49,12 @@
         </button>
       </div>
     </nav>
-
-    <div
+    <p style="background-color: #dd4b39">
+      <strong>Requirements =</strong>
+      Install Metamask Wallet + Use Desktop Browser + Add Binance Smart Chain to
+      your wallet.
+    </p>
+   <!-- <div
       class="
         alert alert-primary alert-dismissible
         fade
@@ -67,7 +71,7 @@
         🚀 Invest in SafeMoonMaker tokens.
         <a href="#buy_token">Click here</a>
       </p>
-    </div>
+    </div> -->
     <div class="container col-xxl-8 px-4 py-0">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-0">
         <div class="col-lg-6 d-flex justify-content-center">
