--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     </nav>
     <p style="background-color: #dd4b39">
       <strong>Requirements =</strong>
-      Install Metamask Wallet + Use Desktop Browser + Add Binance Smart Chain to
-      your wallet.
+      Install Metamask Browser Wallet + Use Desktop Browser + Add Binance Smart
+      Chain to your wallet.
     </p>
    <!-- <div
       class="
