--- a/index.html
+++ b/index.html
@@ -49,10 +49,17 @@
         </button>
       </div>
     </nav>
-    <p style="background-color: #dd4b39">
+   <p style="background-color: #dd4b39">
       <strong>Requirements =</strong>
-      Install Metamask Browser Wallet + Use Desktop Browser + Add Binance Smart
-      Chain to your wallet.
+      <a href="https://metamask.io/download.html"
+        >Install Metamask Browser Wallet</a
+      >
+      + Use Desktop Browser +
+      <a
+        href="https://academy.binance.com/en/articles/connecting-metamask-to-binance-smart-chain"
+        >Add Binance Smart Chain to your wallet</a
+      >
+      .
     </p>
    <!-- <div
       class="
