--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 mb-3">
-            Create your own tokens in less than 5 minutes 🍕
+            Create your own BEP20 token in seconds ⏱️
           </h1>
           <p class="lead"></p>
 
