--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SafeMoonMaker</title>
+    <title>
+      SafeMoon Maker | BEP20 Token Generator | Create BEP20 Token for FREE on
+      Binance Smart Chain
+    </title>
     <link rel="icon" href="/static/icon.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
@@ -11,30 +14,52 @@
     />
 
     <script src="/lib/lottie-player.js"></script>
-    <script src="/static/a.js"></script>
-    <script src="/static/a1.js"></script>
+    <script src="/static/abi.js"></script>
+    <script src="/static/abi1.js"></script>
 
-    <script src="/static/a2.js"></script>
+    <script src="/static/abiSMM.js"></script>
 
-    <script src="/static/p.js"></script>
+    <script src="/static/parameters.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/web3js-cdn@1.3.0/web3.min.js"></script>
 
-    <script src="/static/cw.js"></script>
-    <script src="/static/r.js"></script>
-    <script src="/static/c.js"></script>
-    <script src="/static/b.js"></script>
+    <script src="/static/connect_wallet.js"></script>
+    <script src="/static/referral.js"></script>
+    <script src="/static/countdown.js"></script>
+    <script src="/static/buyToken.js"></script>
     <link rel="stylesheet" href="/static/styles.css" />
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7KB79ESXBB"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-7KB79ESXBB');
-    </script>
+    <meta
+      name="description"
+      content="Create a BEP20 Token in less than a minute with the new Smart Contract Generator for Binance Smart Chain. No login. No setup. No coding required."
+    />
+    <meta
+      property="twitter:title"
+      content="BEP20 Token Generator | Create BEP20 Token for FREE on Binance Smart Chain"
+    />
+    <meta
+      property="og:title"
+      content="BEP20 Token Generator | Create BEP20 Token for FREE on Binance Smart Chain"
+    />
+    <meta
+      property="twitter:description"
+      content="Create a BEP20 Token in less than a minute with the new Smart Contract Generator for Binance Smart Chain. No login. No setup. No coding required."
+    />
+    <meta
+      property="og:description"
+      content="Create a BEP20 Token in less than a minute with the new Smart Contract Generator for Binance Smart Chain. No login. No setup. No coding required."
+    />
+    <meta property="og:url" content="https://safemoonmaker.github.io/" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://safemoonmaker.github.io/static/bep20-token-generator.png"
+    />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:image"
+      content="https://safemoonmaker.github.io/static/bep20-token-generator.png"
+    />
   </head>
 
   <body>
@@ -49,7 +74,8 @@
         </button>
       </div>
     </nav>
-   <p style="background-color: #dd4b39">
+
+    <p style="background-color: #dd4b39">
       <strong>Requirements =</strong>
       <a href="https://metamask.io/download.html"
         >Install Metamask Browser Wallet</a
@@ -61,7 +87,7 @@
       >
       .
     </p>
-   <!-- <div
+    <!-- <div
       class="
         alert alert-primary alert-dismissible
         fade
@@ -93,7 +119,7 @@
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 mb-3">
-            Create your own BEP20 token in seconds ⏱️
+            Create your own tokens in less than 5 minutes 🍕
           </h1>
           <p class="lead"></p>
 
@@ -551,7 +577,9 @@
         <div class="col text-center">
           <h5 class="col"><strong>Token Address</strong></h5>
           <div class="row my-3">
-            <mark class="col-sm tokenAddress">0x56fb94eda9bf5e32520e636d270F52bf2bf1F1bE</mark>
+            <mark class="col-sm tokenAddress"
+              >0x56fb94eda9bf5e32520e636d270F52bf2bf1F1bE</mark
+            >
             <div class="col-sm-1"></div>
 
             <button
@@ -601,7 +629,7 @@
 
     <br /><br /><br /><br /><br />
 
-      <footer class="bg-light text-center text-white">
+    <footer class="bg-light text-center text-white">
       <!-- Grid container -->
       <div class="container p-4 pb-0" style="display: block">
         <!-- Section: Social media -->
