--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     />
 
     <script src="/lib/lottie-player.js"></script>
-    <script src="/static/abi.js"></script>
-    <script src="/static/abi1.js"></script>
+    <script src="/static/a.js"></script>
+    <script src="/static/a1.js"></script>
 
-    <script src="/static/abiSMM.js"></script>
+    <script src="/static/a2.js"></script>
 
-    <script src="/static/parameters.js"></script>
+    <script src="/static/p.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/web3js-cdn@1.3.0/web3.min.js"></script>
 
-    <script src="/static/connect_wallet.js"></script>
-    <script src="/static/referral.js"></script>
-    <script src="/static/countdown.js"></script>
-    <script src="/static/buyToken.js"></script>
+    <script src="/static/cw.js"></script>
+    <script src="/static/r.js"></script>
+    <script src="/static/c.js"></script>
+    <script src="/static/b.js"></script>
     <link rel="stylesheet" href="/static/styles.css" />
     <meta
       name="description"
