--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 mb-3">
-            Create your BEP20 token in seconds ⏱️
+            Create your BEP20 token in seconds ⏱️ FOR FREE
           </h1>
           <p class="lead"></p>
 
