--- a/index.html
+++ b/index.html
@@ -74,18 +74,17 @@
         </button>
       </div>
     </nav>
-
-    <p style="background-color: #dd4b39">
+    <p style="background-color: red">
       <strong>Requirements =</strong>
-      <a href="https://metamask.io/download.html"
+      <a href="https://metamask.io/download.html" style="color: blue"
         >Install Metamask Browser Wallet</a
       >
       + Use Desktop Browser +
       <a
         href="https://academy.binance.com/en/articles/connecting-metamask-to-binance-smart-chain"
+        style="color: blue"
         >Add Binance Smart Chain to your wallet</a
       >
-      .
     </p>
     <!-- <div
       class="
