--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       property="twitter:image"
       content="https://safemoonmaker.github.io/static/bep20-token-generator.png"
     />
+    <meta name="google-site-verification" content="ao9hS7yDUw-d4m80i6qtmkMRx7pAaSxWapAfEZ-dpqY" />
   </head>
 
   <body>
