--- a/index.html
+++ b/index.html
@@ -108,14 +108,19 @@
     <div class="container col-xxl-8 px-4 py-0">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-0">
         <div class="col-lg-6 d-flex justify-content-center">
-          <img
-            src="/static/intro3.gif"
-            class="d-block mx-lg-auto img-fluid"
-            alt="Bootstrap Themes"
-            loading="lazy"
+           <video
+            autoplay
+            loop
+            muted
+            playsinline
             width="500"
             height="500"
-          />
+            class="d-block mx-lg-auto img-fluid"
+          >
+            <source src="/static/intro3.webm" type="video/webm" />
+            <source src="/static/intro3.mp4" type="video/mp4" />
+          </video>
+        </div>
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 mb-3">
