--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
       content="https://safemoonmaker.github.io/static/bep20-token-generator.png"
     />
     <meta name="google-site-verification" content="ao9hS7yDUw-d4m80i6qtmkMRx7pAaSxWapAfEZ-dpqY" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7KB79ESXBB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-7KB79ESXBB');
+    </script>
   </head>
 
   <body>
