--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
         >Add Binance Smart Chain to your wallet</a
       >
     </p>
+    <p style="background-color: aqua">
+      If you need help, join our Telegram
+      <a href="https://t.me/joinchat/L1UfGHZr1v40MjU0">here</a>
+    </p>
     <!-- <div
       class="
         alert alert-primary alert-dismissible
