--- a/index.html
+++ b/index.html
@@ -646,13 +646,13 @@
           >
 
           <!-- Facebook -->
-          <!-- <a
+          <a
             class="btn btn-primary btn-floating m-1"
             style="background-color: #3b5998"
-            href="#!"
+            href="https://t.me/joinchat/L1UfGHZr1v40MjU0"
             role="button"
-            ><i class="fab fa-facebook-f"></i
-          ></a> -->
+            ><i class="fab fa-facebook-f"></i>Support</a
+          >
 
           <!-- Twitter -->
           <!-- <a
