--- a/index.html
+++ b/index.html
@@ -166,6 +166,11 @@
                   />
                 </div>
               </div>
+              <div class="text-center mt-5">
+                <p style="background-color: greenyellow">
+                  PRICE: <del>0.2 BNB</del> FREE
+                </p>
+              </div>
             </form>
           </div>
 
@@ -256,6 +261,11 @@
                     placeholder="5, 10 etc.."
                   />
                 </div>
+              </div>
+              <div class="text-center mt-5">
+                <p style="background-color: greenyellow">
+                  PRICE: <del>0.5 BNB</del> 0.2 BNB
+                </p>
               </div>
             </form>
           </div>
