--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
                 <p style="background-color: greenyellow">
                   PRICE: <del>0.2 BNB</del> FREE
                 </p>
+                   <p>* GAS fee will be added to final amount</p>
               </div>
             </form>
           </div>
@@ -266,6 +267,7 @@
                 <p style="background-color: greenyellow">
                   PRICE: <del>0.5 BNB</del> 0.2 BNB
                 </p>
+                   <p>* GAS fee will be added to final amount</p>
               </div>
             </form>
           </div>
