--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
       If you need help, join our Telegram
       <a href="https://t.me/joinchat/L1UfGHZr1v40MjU0">here</a>
     </p>
+    <p style="background-color: greenyellow">
+      Buy SafeMoon Maker tokens <a href="#buy_token">here</a>
+    </p>
     <!-- <div
       class="
         alert alert-primary alert-dismissible
