--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               </div>
               <div class="text-center mt-5">
                 <p style="background-color: greenyellow">
-                  PRICE: <del>0.2 BNB</del> FREE
+                  FREE
                 </p>
                    <p>* GAS fee will be added to final amount</p>
               </div>
