--- a/index.html
+++ b/index.html
@@ -522,9 +522,12 @@
           <br />
 
           <br />
-          <p class="earnRefferalText">
+          <p class="earnRefferalText" style="display: none">
             Earn money every time a new token's created using your link below.
           </p>
+          <p>
+            Earn up to 0.1 BNB 🤑 every time a new token's created using your link below.
+          <p>  
           <br />
           <div class="row">
             <mark class="col-sm ref_link"
