--- a/index.html
+++ b/index.html
@@ -128,151 +128,231 @@
           </h1>
           <p class="lead"></p>
 
-          <select class="form-select my-5" aria-label="Default select example">
-            <option value="0" selected>Basic Token</option>
-            <option value="1">SafeMoon Twin</option>
-          </select>
-          <div class="basicToken">
-            <form>
-              <div class="form-group row">
-                <label class="col-sm-3 col-form-lable">Token name</label>
-                <div class="col-sm-9">
-                  <input
-                    required
-                    class="token_name"
-                    type="text"
-                    placeholder="KingMoon, RocketMar etc..."
-                  />
-                </div>
+              <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item" role="presentation">
+              <button
+                class="nav-link active"
+                id="basic-tab"
+                data-bs-toggle="tab"
+                data-bs-target="#basic"
+                type="button"
+                role="tab"
+                aria-controls="basic"
+                aria-selected="true"
+              >
+                Basic
+              </button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button
+                class="nav-link"
+                id="safemoon-tab"
+                data-bs-toggle="tab"
+                data-bs-target="#safemoon"
+                type="button"
+                role="tab"
+                aria-controls="safemoon"
+                aria-selected="false"
+              >
+                SafeMoon
+              </button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button
+                class="nav-link"
+                id="customized-tab"
+                data-bs-toggle="tab"
+                data-bs-target="#customized"
+                type="button"
+                role="tab"
+                aria-controls="customized"
+                aria-selected="false"
+              >
+                Advanced
+              </button>
+            </li>
+          </ul>
+          <div class="tab-content" id="myTabContent">
+            <div
+              class="tab-pane fade show active"
+              id="basic"
+              role="tabpanel"
+              aria-labelledby="home-tab"
+            >
+              <div class="basicToken my-5">
+                <form>
+                  <div class="form-group row">
+                    <label class="col-sm-3 col-form-lable">Token name</label>
+                    <div class="col-sm-9">
+                      <input
+                        required
+                        class="token_name"
+                        type="text"
+                        placeholder="KingMoon, RocketMar etc..."
+                      />
+                    </div>
+                  </div>
+                  <br />
+                  <div class="form-group row">
+                    <label class="col-sm-3 col-form-lable">Token symbol</label>
+                    <div class="col-sm-9">
+                      <input
+                        class="token_symbol"
+                        type="text"
+                        placeholder="ROCKET, MOON etc..."
+                      />
+                    </div>
+                  </div>
+                  <br />
+                  <div class="form-group row">
+                    <label class="col-sm-3 col-form-lable">Token supply</label>
+                    <div class="col-sm-9">
+                      <input
+                        class="token_supply"
+                        type="number"
+                        min="1"
+                        step="100000"
+                        placeholder="1000, 1000000 etc.."
+                      />
+                    </div>
+                  </div>
+                  <div class="text-center mt-5">
+                    <p style="background-color: greenyellow">
+                      PRICE: <del>0.2 BNB</del> FREE
+                    </p>
+                    <p>* GAS fee will be added to final amount</p>
+                  </div>
+                </form>
               </div>
-              <br />
-              <div class="form-group row">
-                <label class="col-sm-3 col-form-lable">Token symbol</label>
-                <div class="col-sm-9">
-                  <input
-                    class="token_symbol"
-                    type="text"
-                    placeholder="ROCKET, MOON etc..."
-                  />
-                </div>
+            </div>
+            <div
+              class="tab-pane fade"
+              id="safemoon"
+              role="tabpanel"
+              aria-labelledby="safemoon-tab"
+            >
+              <div class="safemoonTwin my-5">
+                <form>
+                  <div class="form-group row">
+                    <label class="col-sm-3 col-form-lable">Token name</label>
+                    <div class="col-sm-9">
+                      <input
+                        class="token_name1"
+                        type="text"
+                        placeholder="KingMoon, RocketMar etc..."
+                      />
+                    </div>
+                  </div>
+                  <br />
+                  <div class="form-group row">
+                    <label class="col-sm-3 col-form-lable">Token symbol</label>
+                    <div class="col-sm-9">
+                      <input
+                        class="token_symbol1"
+                        type="text"
+                        placeholder="ROCKET, MOON etc..."
+                      />
+                    </div>
+                  </div>
+                  <br />
+                  <div class="form-group row">
+                    <label class="col-sm-3 col-form-lable">Decimals</label>
+                    <div class="col-sm-9">
+                      <input
+                        class="decimals1"
+                        type="number"
+                        min="1"
+                        step="1"
+                        placeholder="18 etc.."
+                      />
+                    </div>
+                  </div>
+                  <br />
+                  <div class="form-group row">
+                    <label class="col-sm-3 col-form-lable">Token supply</label>
+                    <div class="col-sm-9">
+                      <input
+                        class="token_supply1"
+                        type="number"
+                        min="1"
+                        step="100000"
+                        placeholder="1000, 1000000 etc.."
+                      />
+                    </div>
+                  </div>
+                  <br />
+                  <div class="form-group row">
+                    <label class="col-sm-3 col-form-lable">Tax Fees</label>
+                    <div class="col-sm-9">
+                      <input
+                        class="tax_fees1"
+                        type="number"
+                        min="0"
+                        step="1"
+                        placeholder="5, 10 etc.."
+                      />
+                    </div>
+                  </div>
+                  <br />
+                  <div class="form-group row">
+                    <label class="col-sm-3 col-form-lable"
+                      >Liquidity Fees</label
+                    >
+                    <div class="col-sm-9">
+                      <input
+                        class="liquidity_fees1"
+                        type="number"
+                        min="0"
+                        step="1"
+                        placeholder="5, 10 etc.."
+                      />
+                    </div>
+                  </div>
+                  <br />
+                  <div class="form-group row">
+                    <label class="col-sm-3 col-form-lable"
+                      >Max Transfer %</label
+                    >
+                    <div class="col-sm-9">
+                      <input
+                        class="max_tx_percent1"
+                        type="number"
+                        min="0"
+                        step="1"
+                        placeholder="5, 10 etc.."
+                      />
+                    </div>
+                  </div>
+                  <div class="text-center mt-5">
+                    <p style="background-color: greenyellow">
+                      PRICE: <del>0.5 BNB</del> 0.2 BNB
+                    </p>
+                    <p>* GAS fee will be added to final amount</p>
+                  </div>
+                </form>
               </div>
-              <br />
-              <div class="form-group row">
-                <label class="col-sm-3 col-form-lable">Token supply</label>
-                <div class="col-sm-9">
-                  <input
-                    class="token_supply"
-                    type="number"
-                    min="1"
-                    step="100000"
-                    placeholder="1000, 1000000 etc.."
-                  />
-                </div>
-              </div>
-              <div class="text-center mt-5">
-                <p style="background-color: greenyellow">
-                  FREE
+            </div>
+            <div
+              class="tab-pane fade"
+              id="customized"
+              role="tabpanel"
+              aria-labelledby="contact-tab"
+            >
+              <div class="customizedToken row my-5">
+                <p>
+                  ⛏️If you need more features for your token, contact us. We can
+                  make customized smart contracts for your project. We will
+                  develop and implement more advanced and cool features for your
+                  token. Everything is tailored to fit your needs. 🧑‍💻
                 </p>
-                   <p>* GAS fee will be added to final amount</p>
+                <a
+                  href="https://t.me/joinchat/L1UfGHZr1v40MjU0"
+                  class="btn btn-danger my-5"
+                  role="button"
+                  >Contact Us</a
+                >
               </div>
-            </form>
-          </div>
-
-          <div class="safemoonTwin">
-            <form>
-              <div class="form-group row">
-                <label class="col-sm-3 col-form-lable">Token name</label>
-                <div class="col-sm-9">
-                  <input
-                    class="token_name1"
-                    type="text"
-                    placeholder="KingMoon, RocketMar etc..."
-                  />
-                </div>
-              </div>
-              <br />
-              <div class="form-group row">
-                <label class="col-sm-3 col-form-lable">Token symbol</label>
-                <div class="col-sm-9">
-                  <input
-                    class="token_symbol1"
-                    type="text"
-                    placeholder="ROCKET, MOON etc..."
-                  />
-                </div>
-              </div>
-              <br />
-              <div class="form-group row">
-                <label class="col-sm-3 col-form-lable">Decimals</label>
-                <div class="col-sm-9">
-                  <input
-                    class="decimals1"
-                    type="number"
-                    min="1"
-                    step="1"
-                    placeholder="18 etc.."
-                  />
-                </div>
-              </div>
-              <br />
-              <div class="form-group row">
-                <label class="col-sm-3 col-form-lable">Token supply</label>
-                <div class="col-sm-9">
-                  <input
-                    class="token_supply1"
-                    type="number"
-                    min="1"
-                    step="100000"
-                    placeholder="1000, 1000000 etc.."
-                  />
-                </div>
-              </div>
-              <br />
-              <div class="form-group row">
-                <label class="col-sm-3 col-form-lable">Tax Fees</label>
-                <div class="col-sm-9">
-                  <input
-                    class="tax_fees1"
-                    type="number"
-                    min="0"
-                    step="1"
-                    placeholder="5, 10 etc.."
-                  />
-                </div>
-              </div>
-              <br />
-              <div class="form-group row">
-                <label class="col-sm-3 col-form-lable">Liquidity Fees</label>
-                <div class="col-sm-9">
-                  <input
-                    class="liquidity_fees1"
-                    type="number"
-                    min="0"
-                    step="1"
-                    placeholder="5, 10 etc.."
-                  />
-                </div>
-              </div>
-              <br />
-              <div class="form-group row">
-                <label class="col-sm-3 col-form-lable">Max Transfer %</label>
-                <div class="col-sm-9">
-                  <input
-                    class="max_tx_percent1"
-                    type="number"
-                    min="0"
-                    step="1"
-                    placeholder="5, 10 etc.."
-                  />
-                </div>
-              </div>
-              <div class="text-center mt-5">
-                <p style="background-color: greenyellow">
-                  PRICE: <del>0.5 BNB</del> 0.2 BNB
-                </p>
-                   <p>* GAS fee will be added to final amount</p>
-              </div>
-            </form>
+            </div>
           </div>
 
           <div class="row">
