--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
               row
               d-flex
               align-items-center
+                   actionGroup
             "
           >
             <button
