--- a/index.html
+++ b/index.html
@@ -369,10 +369,10 @@
             >
               <div class="customizedToken row my-5">
                 <p>
-                  ⛏️If you need more features for your token, contact us. We can
-                  make customized smart contracts for your project. We will
-                  develop and implement more advanced and cool features for your
-                  token. Everything is tailored to fit your needs. 🧑‍💻
+                  ⛏️If you need more features for your token, we can make
+                  customized smart contracts for your project. We will develop
+                  and implement more advanced and cool features for your token.
+                  Everything is tailored to fit your needs. 🧑‍💻
                 </p>
                 <a
                   href="https://t.me/joinchat/L1UfGHZr1v40MjU0"
