--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 mb-3">
-            Create your BEP20 token in SECONDS 💨 for FREE 🚀
+            Create your BEP20 token in SECONDS 💨 for FREE 🤗
           </h1>
           <p class="lead"></p>
 
