--- a/index.html
+++ b/index.html
@@ -69,24 +69,24 @@
         </button>
       </div>
     </nav>
-    <p style="background-color: red">
-      <strong>Requirements =</strong>
+    <p style="background-color: wheat">
+      🕶️ <strong>Requirements =</strong>
       <a href="https://metamask.io/download.html" style="color: blue"
-        >Install Metamask Browser Wallet</a
+        >install Metamask browser wallet</a
       >
-      + Use Desktop Browser +
+      + use desktop browser +
       <a
         href="https://academy.binance.com/en/articles/connecting-metamask-to-binance-smart-chain"
         style="color: blue"
-        >Add Binance Smart Chain to your wallet</a
+        >connect Metamask to Binance Smart Chain</a
       >
     </p>
-    <p style="background-color: aqua">
-      If you need help, join our Telegram
-      <a href="https://t.me/joinchat/L1UfGHZr1v40MjU0">here</a>
-    </p>
-    <p style="background-color: greenyellow">
-      Buy SafeMoon Maker tokens <a href="#buy_token">here</a>
+    <p>
+      👉
+      <a href="https://t.me/joinchat/L1UfGHZr1v40MjU0" style="color: red"
+        >Join our Telegram</a
+      >
+      <a href="#buy_token" style="color: blue">Buy SafeMoonMaker</a>
     </p>
     <!-- <div
       class="
