--- a/index.html
+++ b/index.html
@@ -352,6 +352,13 @@
                       </p>
                     </div>
                   </div>
+                  <p class="hint1">
+                    <strong>Note:</strong> If you want more functions,
+                    <a href="https://t.me/joinchat/L1UfGHZr1v40MjU0"
+                      >contact us.</a
+                    >
+                    👈
+                  </p>
                   <div class="text-center mt-5">
                     <p style="background-color: greenyellow">
                       PRICE: <del>0.5 BNB</del> 0.2 BNB
