--- a/index.html
+++ b/index.html
@@ -70,15 +70,17 @@
       </div>
     </nav>
     <p style="background-color: wheat">
-      🕶️ <strong>Requirements =</strong>
-      <a href="https://metamask.io/download.html" style="color: blue"
-        >install Metamask browser wallet</a
-      >
-      + use desktop browser +
+      🕶️ <strong>Requirements =</strong> use a supported desktop browser (<a
+        href="https://www.google.com/chrome/"
+        >Chrome</a
+      >, <a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a>, <a href="https://brave.com/">Brave</a>, <a href="https://www.microsoft.com/en-us/edge">Edge</a> ) <strong>+</strong>
+      install <a href="https://metamask.io/download.html">Metamask</a>
+         </a
+      >browser wallet
+      <strong>+</strong> connect Metamask to
       <a
         href="https://academy.binance.com/en/articles/connecting-metamask-to-binance-smart-chain"
-        style="color: blue"
-        >connect Metamask to Binance Smart Chain</a
+        > Binance Smart Chain</a
       >
     </p>
     <p>
