--- a/index.html
+++ b/index.html
@@ -843,6 +843,7 @@
       </div>
       <!-- Copyright -->
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
           if (navigator.userAgent.indexOf("Safari") != -1) {
