--- a/index.html
+++ b/index.html
@@ -379,10 +379,14 @@
             >
               <div class="customizedToken row my-5">
                 <p>
-                  ⛏️If you need more features for your token, we can make
-                  customized smart contracts for your project. We will develop
-                  and implement more advanced and cool features for your token.
-                  Everything is tailored to fit your needs. 🧑‍💻
+                  <ul>
+                    <li class="mt-2">Add more functions 🏆 ✅</li>
+                    <li class="mt-2">Tailored for your project 🥇 ✅</li>
+                    <li class="mt-2">Great expertise in crypto/blockchain tech 👨‍💻✅</li>
+                    <li class="mt-2">Quick development time 🚀 ✅</li>
+                    <li class="mt-2">Afforadable 💯 ✅</li>
+                    <li class="mt-2">Pay in crypto/paypal ☑️ ✅</li>
+                  </ul>
                 </p>
                 <a
                   href="https://t.me/joinchat/L1UfGHZr1v40MjU0"
