--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
        
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 mb-3">
-            Create your BEP20 token in SECONDS 💨 for FREE 🤗
+            Create your BEP20 token in SECONDS 💨 WITHOUT CODING 🤗
           </h1>
           <p class="lead"></p>
 
@@ -224,7 +224,7 @@
                   </div>
                   <div class="text-center mt-5">
                     <p style="background-color: greenyellow">
-                      PRICE: <del>0.2 BNB</del> FREE
+                      PRICE: 0.2 BNB
                     </p>
                     <p>* GAS fee will be added to final amount</p>
                   </div>
