--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
        
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 mb-3">
-            Create your BEP20 token in SECONDS 💨 WITHOUT CODING 🤗
+            Create your BEP20 token in SECONDS 💨 No coding required 🤗
           </h1>
           <p class="lead"></p>
 
