--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                   </div>
                   <div class="text-center mt-5">
                     <p style="background-color: greenyellow">
-                      PRICE: 0.2 BNB
+                      PRICE: <del>0.2 BNB</del> 0.1 BNB
                     </p>
                     <p>* GAS fee will be added to final amount</p>
                   </div>
