--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 aria-controls="basic"
                 aria-selected="true"
               >
-                Basic
+                Standard
               </button>
             </li>
             <li class="nav-item" role="presentation">
