--- a/index.html
+++ b/index.html
@@ -400,12 +400,13 @@
                     </div>
                   </div>
                   <br />
-                  <div class="form-group row">
+                  <div class="form-group row" style="display: none;">
                     <label class="col-sm-3 col-form-lable"
                       >Max Transfer % *</label
                     >
                     <div class="col-sm-9">
                       <input
+                        value="100"
                         class="max_tx_percent1"
                         type="number"
                         min="0"
