--- a/index.html
+++ b/index.html
@@ -1248,8 +1248,11 @@
           <br />
 
           <br />
-          <p class="earnRefferalText">
+          <p class="earnRefferalText" style="display: none;">
             Earn money every time a new token's created using your link below.
+          </p>
+          <p>
+            Earn up to 0.5 BNB 🤑 every time a new token's created using your link below.
           </p>
           <br />
           <div class="row">
