--- a/index.html
+++ b/index.html
@@ -1041,7 +1041,7 @@
           <a href="#ref_id">Click here.</a>
         </p>
 
-        <p>
+        <p hidden>
           💸 Invest in SafeMoonMaker tokens.
           <a href="#buy_token">Click here.</a>
         </p>
@@ -1274,7 +1274,7 @@
 
       <br />
     </div>
-    <div class="row text-center my-5 countdown" id="buy_token">
+    <div class="row text-center my-5 countdown" id="buy_token" hidden>
       <h2 class="my-3">PRESALE <strong>COUNTDOWN</strong></h2>
       <div id="clockdiv">
         <div>
@@ -1299,7 +1299,7 @@
       </p>
     </div>
 
-    <div class="container">
+    <div class="container" hidden>
       <div class="row">
         <div class="col-sm-6">
           <h3 class="fw-bold mb-0">✅ Invest in SafeMoonMaker token</h3>
