--- a/index.html
+++ b/index.html
@@ -1381,7 +1381,7 @@
         <!-- Section: Social media -->
         <section class="mb-4">
           <!-- Telegram -->
-          <a
+          <a hidden
             class="btn btn-primary btn-floating m-1"
             style="background-color: #dd4b39"
             href="https://t.me/safemoonmakerofficial"
@@ -1392,10 +1392,10 @@
           <!-- Facebook -->
           <a
             class="btn btn-primary btn-floating m-1"
-            style="background-color: #3b5998"
+            style="background-color: #dd4b39"
             href="https://t.me/joinchat/L1UfGHZr1v40MjU0"
             role="button"
-            ><i class="fab fa-facebook-f"></i>Support</a
+            ><i class="fab fa-google"></i>Telegram</a
           >
 
           <!-- Twitter -->
