--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <a href="https://t.me/joinchat/L1UfGHZr1v40MjU0" style="color: red"
         >Join our Telegram</a
       >
-      <a href="#buy_token" style="color: blue">Buy SafeMoonMaker</a>
+      <a hidden href="#buy_token" style="color: blue">Buy SafeMoonMaker</a>
     </p>
 
     <!-- <div
