--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                         placeholder="5"
                       />
                       <p class="hint">
-                        Transaction fee in % to generate yield.
+                        Transaction fee in % to burn.
                       </p>
                     </div>
                   </div>
@@ -555,7 +555,7 @@
                         placeholder="5"
                       />
                       <p class="hint">
-                        Transaction fee in % to generate yield.
+                        Transaction fee in % to burn.
                       </p>
                     </div>
                   </div>
@@ -609,7 +609,7 @@
                         placeholder="5"
                       />
                       <p class="hint">
-                        Transaction fee in % to generate yield.
+                        Transaction fee in % to burn.
                       </p>
                     </div>
                   </div>
