--- a/index.html
+++ b/index.html
@@ -914,8 +914,16 @@
                     <li class="mt-2">Great expertise in crypto/blockchain tech 👨‍💻 ✅</li>
                     <li class="mt-2">Quick development time 🚀 ✅</li>
                     <li class="mt-2">Afforadable 💯 ✅</li>
-                    <li class="mt-2">Pay in crypto/paypal ☑️ ✅</li>
+                    <li class="mt-2">
+                      crypto/paypal ☑️ ✅</li>
                   </ul>
+                </p>
+               <p class="hint1">
+                  <strong>Note:</strong> More interesting token types such as Token Reward in BNB/BUSD or other tokens, Surge are coming... with Anti-Whale, Anti-Bot Mechanism
+                  <a href="https://t.me/joinchat/L1UfGHZr1v40MjU0"
+                    >contact us.</a
+                  >
+                  👈
                 </p>
                 <a
                   href="https://t.me/joinchat/L1UfGHZr1v40MjU0"
