--- a/index.html
+++ b/index.html
@@ -214,12 +214,7 @@
                     </p>
                   </div>
                 </div>
-                <div class="text-center mt-5">
-                  <p style="background-color: greenyellow">
-                    FREE
-                  </p>
-                  <p>* GAS fee will be added to final amount</p>
-                </div>
+
               </form>
             </div>
           </div>
@@ -299,12 +294,7 @@
                   <a href="https://t.me/TokenGeneratorBSC">contact us.</a>
                   👈
                 </p>
-                <div class="text-center mt-5">
-                  <p style="background-color: greenyellow">
-                    FREE
-                  </p>
-                  <p>* GAS fee will be added to final amount</p>
-                </div>
+
               </form>
             </div>
           </div>
@@ -442,12 +432,7 @@
                   <a href="https://t.me/TokenGeneratorBSC">contact us.</a>
                   👈
                 </p>
-                <div class="text-center mt-5">
-                  <p style="background-color: greenyellow">
-                    FREE
-                  </p>
-                  <p>* GAS fee will be added to final amount</p>
-                </div>
+
               </form>
             </div>
           </div>
@@ -510,12 +495,7 @@
                   <a href="https://t.me/TokenGeneratorBSC">contact us.</a>
                   👈
                 </p>
-                <div class="text-center mt-5">
-                  <p style="background-color: greenyellow">
-                    FREE
-                  </p>
-                  <p>* GAS fee will be added to final amount</p>
-                </div>
+
               </form>
             </div>
 
@@ -579,15 +559,9 @@
                   <a href="https://t.me/TokenGeneratorBSC">contact us.</a>
                   👈
                 </p>
-                <div class="text-center mt-5">
-                  <p style="background-color: greenyellow">
-                    FREE
-                  </p>
-                  <p>* GAS fee will be added to final amount</p>
-                </div>
+
               </form>
             </div>
-
           </div>
 
           <div class="tab-pane fade" id="rewardtoken" role="tabpanel" aria-labelledby="rewardtoken-tab">
@@ -604,7 +578,6 @@
                       <option value="4">BUSD</option>
                       <!-- <option value="5">DOGE</option> -->
                       <!-- <option value="6">ADA</option> -->
-
                     </select>
                     <p class="hint">Select reward token to be distributed among holders.</p>
                   </div>
@@ -723,12 +696,7 @@
                   <a href="https://t.me/TokenGeneratorBSC">contact us.</a>
                   👈
                 </p>
-                <div class="text-center mt-5">
-                  <p style="background-color: greenyellow">
-                    FREE
-                  </p>
-                  <p>* GAS fee will be added to final amount</p>
-                </div>
+
               </form>
             </div>
           </div>
@@ -756,9 +724,16 @@
         </div>
 
         <div style="display: block;" class="actionGroup">
+          <div class="text-center mt-5">
+            <p style="background-color: greenyellow">
+              FREE
+            </p>
+            <p>* GAS fee will be added to final amount</p>
+            <p>* 3% transaction fees when sell</p>
+          </div>
           <p>Network * </p>
           <select class="form-select network" aria-label="Default select example">
-            <option value="0" selected>Binance Smart Chain</option>
+            <option value="0">Binance Smart Chain</option>
             <!-- <option value="1">Binance Smart Chain - Testnet</option> -->
           </select>
           <p class="hint">Choose your network</p>
