--- a/index.html
+++ b/index.html
@@ -914,7 +914,7 @@
         <div class="container">
           <h1 class="display-4 text-primary">What Others Say About Us ⭐ ⭐ ⭐ ⭐ ⭐</h1>
           <p class="lead"> We are passionate smart contract programmers
-            <br> who want to make token creation easy &amp; acessible for everyone.
+            <br> who want to make token creation easy &amp; accessible for everyone.
           </p>
         </div>
       </div>
