--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
             d="M12.331 9.5a1 1 0 0 1 0 1A4.998 4.998 0 0 1 8 13a4.998 4.998 0 0 1-4.33-2.5A1 1 0 0 1 4.535 9h6.93a1 1 0 0 1 .866.5zM7 6.5c0 .828-.448 0-1 0s-1 .828-1 0S5.448 5 6 5s1 .672 1 1.5zm4 0c0 .828-.448 0-1 0s-1 .828-1 0S9.448 5 10 5s1 .672 1 1.5z" />
         </svg>
         <div>
-          <h4 class="fw-bold mb-0">Be proud</h4>
+          <h4 class="fw-bold mb-0">Be pround</h4>
           <p>Share your own tokens with your family, friends and the world</p>
         </div>
       </div>
@@ -914,7 +914,7 @@
         <div class="container">
           <h1 class="display-4 text-primary">What Others Say About Us ⭐ ⭐ ⭐ ⭐ ⭐</h1>
           <p class="lead"> We are passionate smart contract programmers
-            <br> who want to make token creation easy &amp; accessible for everyone.
+            <br> who want to make token creation easy &amp; acessible for everyone.
           </p>
         </div>
       </div>
