--- a/bep20-token-generator/index.html
+++ b/bep20-token-generator/index.html
@@ -830,7 +830,7 @@
         <div class="modal-content p-1">
           <div class="embed-responsive embed-responsive-16by9">
             <iframe class="embed-responsive-item" width="100%" height="350"
-              src="https://www.youtube.com/embed/Jfrjeg26Cwk" title="YouTube video player" frameborder="0"
+              src="https://www.youtube.com/embed/K-dh74j5ej0" title="YouTube video player" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
           </div>
